post alignment fix

--- a/components/CommonComponents/Post/styles.module.css
+++ b/components/CommonComponents/Post/styles.module.css
@@ -48,10 +48,10 @@
 
 .productImg {
   border-radius: 1rem;
-  object-fit: cover;
   height: 100%;
   width: 100%;
   cursor: pointer;
+  object-fit: cover !important;
   transition: transform 0.4s;
 }
 
